# zhuomianhejizidonggengx

./: .eslintignore  .eslintrc.json  BUILD_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLIPBOARD_FIX.md  IMMEDIATE_SOLUTION.md  QUICK_BUILD_SOLUTION.md  README.md  TAURI_FILE_DIALOG_INTEGRATION_GUIDE.md  TEST_REMEMBER_ME.md  VERCEL_DEPLOYMENT_GUIDE.md  build-tauri.bat  build-tauri.ps1  check_existing_users.js  check_user_password.js  check_users.js  clean_old_users.js  create_and_disable_testuser.js  debug-auth.md  debug_password_hash.js  deploy-update-server.sh  diagnose_update.html  disable_testuser.js  find_testuser_by_hash.js  force-build-clipboard-fix.ps1  force-build.ps1  next.config.mjs  package-lock.json  package.json  query_database_users.js  reset_user_password.js  reset_user_passwords.md  search_all_databases.js  tailwind.config.ts  temp_update_config.json  test-download.md  test_admin_login.js  test_download_fix.md  test_login.html  (+15 more)
app/: globals.css  layout.tsx  page.tsx
components/: dev-tools-blocker.tsx  header.tsx  sidebar.tsx  stats-cards.tsx  tool-grid.tsx  update-checker.tsx  version-notifications.tsx  weather-widget.tsx  web-view-modal.tsx
docs/: COPY_PASTE_CODE_TEMPLATE.js  DOWNLOAD_FIX_SUMMARY.md  EXTERNAL_BROWSER_OPEN_FEATURE.md  FILE_DIALOG_DOCS_INDEX.md  FINAL_VERIFIED_DOWNLOAD_FIX.md  QUICK_REFERENCE_TAURI_FILE_DIALOG.md  README.md  (+4 more)
lib/: database.ts  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: auth-capability.json  default.json  http-capability.json  iframe-capability.json  main-capability.json
src-tauri/src/: auth.rs  lib.rs
(+167 files in other folders)
