[package]
name = "app"
version = "1.0.25"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-app = { version = "2.0.0-alpha.2" }

# 认证系统依赖
mongodb = "3.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"

# Token管理和本地存储依赖
jsonwebtoken = "9.3"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-store = "2"
